v12/fixtures/ast/errors/alias_reexport_impl_ambiguity/base.able
package alias_reexport_impl_ambiguity_base

interface Taggable for T {
  fn tag(self: Self) -> String
}

struct Widget { value: i32 }
